Changed navbar to fixed so it doesnt get stuck on the header (for some reason)

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -20,6 +20,10 @@ body {
 
   font-size: 24px;
   font-family: 'Source Sans Pro', sans-serif;
+
+  /* This makes it so the navbar doesnt overlap elements
+     when scrolled all the way up */
+  padding-top: 100px;
 }
 
 .tweets-container {
